public enum Direction {
  LEFT, RIGHT, DOWN
}
