import java.awt.Color;

public class Eye extends DrawableCircle{  
  public Eye(double x, double y, double radius) {
    super(x, y, radius, Color.BLACK);
  }
}
