public interface Touchable {
  public boolean isTouched(double x, double y);
  public boolean isVTouched(double y);
  public boolean isHTouched(double x);
}
